--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "graphql-api",
+  "name": "grupo-maya",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@apollo/utils.keyvadapter": "^1.1.2",
+    "@keyv/redis": "^2.5.2",
+    "apollo-server-core": "^3.10.3",
+    "apollo-server-express": "^3.10.3",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "graphql": "^14.6.0",
-    "mongoose": "^5.9.7"
+    "express": "^4.18.2",
+    "express-jwt": "^7.7.5",
+    "graphql": "^16.6.0",
+    "keyv": "^4.5.0",
+    "mongoose": "^6.6.7",
+    "nodemon": "^2.0.20",
+    "standard": "^17.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
