--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "keyv": "^4.5.0",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20",
+    "playwright": "^1.27.1",
     "standard": "^17.0.0"
   },
   "eslintConfig": {
