test github actions

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,11 +9,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: npx playwright install-with-deps
       - run: npm install
+      - run: npx playwright install-deps
                
       - name: Install Railway
         run: npm i -g @railway/cli
+
+    - name : build
+      run : npm run build
 
       - name: Deploy
         run: railway up
