--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,14 +11,13 @@ jobs:
           node-version: '16'
       - run: npm install
       - run: npx playwright install-deps
+      - run: apt-get install libnss3
                
       - name: Install Railway
         run: npm i -g @railway/cli
-
-    - name : build
-      run : npm run build
 
       - name: Deploy
         run: railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+    
