--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,8 +10,9 @@ jobs:
         with:
           node-version: '16'
       - run: npm install
+      - run: npx playwright install
       - run: npx playwright install-deps
-      - run: sudo apt-get install libnss3
+      - run: npx playwright install chromium
                
       - name: Install Railway
         run: npm i -g @railway/cli
