--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,12 +8,15 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'      
+          node-version: '16'            
+      - name: Install Railway
         run: npm i -g @railway/cli
+      - name: Install dependencies
+        run: npm install
+      - name: Install playwright        
+        run: npx playwright install-deps chromium
       - name: Deploy
         run: railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      - run: npx playwright install-deps chromium
-      - name: Install Railway
     
