--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,10 +13,12 @@ jobs:
         run: npm i -g @railway/cli
       - name: Install dependencies
         run: npm install
-      - name: Install playwright        
-        run: npx playwright install-deps chromium
       - name: Deploy
         run: railway up
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      - name: Run Project
+        run: npx playwright install-deps chromium && npm run start
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     
