--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,8 +11,10 @@ jobs:
           node-version: '16'            
       - name: Install Railway
         run: npm i -g @railway/cli
-      - name: Install dependencies
+      - name: Install dependencies      
         run: npm install
+      - name: install playwright dependencies
+        run: npx playwright install-deps chromium
       - name: Deploy
         run: railway up 
         env:
