--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
     "graphql": "^16.6.0",
+    "husky": "^8.0.3",
     "keyv": "^4.5.0",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20",
@@ -31,5 +32,10 @@
   },
   "eslintConfig": {
     "extends": "standard"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "co99"
+    }
   }
 }
