--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
     "graphql": "^16.6.0",
-    "husky": "^8.0.3",
     "keyv": "^4.5.0",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20",
     "playwright": "^1.27.1",
     "standard": "^17.0.0",
     "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "husky": "^6.0.0"
   },
   "eslintConfig": {
     "extends": "standard"
