--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "apollo-server-core": "^3.10.3",
     "apollo-server-express": "^3.10.3",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "graphql": "^16.6.0",
     "keyv": "^4.5.0",
     "mongoose": "^6.6.7",
